{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 60,
  "lineage": "423777d9-b459-2dd8-bdaf-63cf610d2f2f",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700630169071:security-group/sg-08cb94e1b7d1e1aad",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-08cb94e1b7d1e1aad",
            "ingress": [],
            "name": "xyz-cluster-D0wdJRWj-cluster-2023050503173491860000000d",
            "name_prefix": "xyz-cluster-D0wdJRWj-cluster-",
            "owner_id": "700630169071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xyz-cluster-D0wdJRWj-cluster"
            },
            "tags_all": {
              "Name": "xyz-cluster-D0wdJRWj-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7c77702628ede0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700630169071:security-group/sg-039ee6d5f86314994",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-039ee6d5f86314994",
            "ingress": [],
            "name": "xyz-cluster-D0wdJRWj-node-2023050503173489470000000c",
            "name_prefix": "xyz-cluster-D0wdJRWj-node-",
            "owner_id": "700630169071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xyz-cluster-D0wdJRWj-node",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "owned"
            },
            "tags_all": {
              "Name": "xyz-cluster-D0wdJRWj-node",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7c77702628ede0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2590350771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08cb94e1b7d1e1aad",
            "security_group_rule_id": "sgr-0d8f16c73b7941b20",
            "self": false,
            "source_security_group_id": "sg-039ee6d5f86314994",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3508321499",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-039ee6d5f86314994",
            "security_group_rule_id": "sgr-0b33633e2f9a664d1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-347746459",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039ee6d5f86314994",
            "security_group_rule_id": "sgr-0c510c6f98e5c771d",
            "self": false,
            "source_security_group_id": "sg-08cb94e1b7d1e1aad",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3275891849",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039ee6d5f86314994",
            "security_group_rule_id": "sgr-0ad699e95d5bdb1d7",
            "self": false,
            "source_security_group_id": "sg-08cb94e1b7d1e1aad",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-425492286",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039ee6d5f86314994",
            "security_group_rule_id": "sgr-0c744fc14dd0e2ca1",
            "self": false,
            "source_security_group_id": "sg-08cb94e1b7d1e1aad",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2113752309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039ee6d5f86314994",
            "security_group_rule_id": "sgr-04fa4f4c9c2616e9c",
            "self": false,
            "source_security_group_id": "sg-08cb94e1b7d1e1aad",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-436895825",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039ee6d5f86314994",
            "security_group_rule_id": "sgr-0de1e3dfc56cc743b",
            "self": false,
            "source_security_group_id": "sg-08cb94e1b7d1e1aad",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1531372261",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039ee6d5f86314994",
            "security_group_rule_id": "sgr-04c5e7d304758d2ec",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2050509871",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039ee6d5f86314994",
            "security_group_rule_id": "sgr-0cdd7114d7dda33d3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3731353536",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-039ee6d5f86314994",
            "security_group_rule_id": "sgr-032c71d2f5e531300",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0789c03d9fdc06e6d",
            "domain": "vpc",
            "id": "eipalloc-0789c03d9fdc06e6d",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-23-33-224.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.33.224",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "xyz-D0wdJRWj-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "xyz-D0wdJRWj-vpc-us-east-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700630169071:internet-gateway/igw-02582517fe5aa9439",
            "id": "igw-02582517fe5aa9439",
            "owner_id": "700630169071",
            "tags": {
              "Name": "xyz-D0wdJRWj-vpc"
            },
            "tags_all": {
              "Name": "xyz-D0wdJRWj-vpc"
            },
            "vpc_id": "vpc-0e7c77702628ede0a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0789c03d9fdc06e6d",
            "connectivity_type": "public",
            "id": "nat-0dd274cb5b2a528f4",
            "network_interface_id": "eni-03535769939811333",
            "private_ip": "10.0.4.98",
            "public_ip": "3.23.33.224",
            "subnet_id": "subnet-05cce7afe12fc9e77",
            "tags": {
              "Name": "xyz-D0wdJRWj-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "xyz-D0wdJRWj-vpc-us-east-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01e2f71c418f14ceb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dd274cb5b2a528f4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01e2f71c418f14ceb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02582517fe5aa9439",
            "id": "r-rtb-0ab3197f38a3eee791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ab3197f38a3eee79",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700630169071:route-table/rtb-01e2f71c418f14ceb",
            "id": "rtb-01e2f71c418f14ceb",
            "owner_id": "700630169071",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "xyz-D0wdJRWj-vpc-private"
            },
            "tags_all": {
              "Name": "xyz-D0wdJRWj-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7c77702628ede0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700630169071:route-table/rtb-0ab3197f38a3eee79",
            "id": "rtb-0ab3197f38a3eee79",
            "owner_id": "700630169071",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "xyz-D0wdJRWj-vpc-public"
            },
            "tags_all": {
              "Name": "xyz-D0wdJRWj-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7c77702628ede0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2ad8a834a1424cd",
            "route_table_id": "rtb-01e2f71c418f14ceb",
            "subnet_id": "subnet-02a667e6f28930f14"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010223a98bbd9b076",
            "route_table_id": "rtb-01e2f71c418f14ceb",
            "subnet_id": "subnet-087c83e014b87b643"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ef6093fd6b39a2a",
            "route_table_id": "rtb-01e2f71c418f14ceb",
            "subnet_id": "subnet-0944a73d4e9c7b6ed"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f3b3104f5295e82",
            "route_table_id": "rtb-0ab3197f38a3eee79",
            "subnet_id": "subnet-05cce7afe12fc9e77"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025721c3f8f69589e",
            "route_table_id": "rtb-0ab3197f38a3eee79",
            "subnet_id": "subnet-0eeae5a5f7779f9ab"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdec6bc572ce501d",
            "route_table_id": "rtb-0ab3197f38a3eee79",
            "subnet_id": "subnet-09b9d7f9d61249a5f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700630169071:subnet/subnet-02a667e6f28930f14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a667e6f28930f14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700630169071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xyz-D0wdJRWj-vpc-private-us-east-2a",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "xyz-D0wdJRWj-vpc-private-us-east-2a",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e7c77702628ede0a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700630169071:subnet/subnet-087c83e014b87b643",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087c83e014b87b643",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700630169071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xyz-D0wdJRWj-vpc-private-us-east-2b",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "xyz-D0wdJRWj-vpc-private-us-east-2b",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e7c77702628ede0a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700630169071:subnet/subnet-0944a73d4e9c7b6ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0944a73d4e9c7b6ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700630169071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xyz-D0wdJRWj-vpc-private-us-east-2c",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "xyz-D0wdJRWj-vpc-private-us-east-2c",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e7c77702628ede0a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700630169071:subnet/subnet-05cce7afe12fc9e77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cce7afe12fc9e77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700630169071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xyz-D0wdJRWj-vpc-public-us-east-2a",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "xyz-D0wdJRWj-vpc-public-us-east-2a",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e7c77702628ede0a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700630169071:subnet/subnet-0eeae5a5f7779f9ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeae5a5f7779f9ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700630169071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xyz-D0wdJRWj-vpc-public-us-east-2b",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "xyz-D0wdJRWj-vpc-public-us-east-2b",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e7c77702628ede0a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700630169071:subnet/subnet-09b9d7f9d61249a5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b9d7f9d61249a5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700630169071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xyz-D0wdJRWj-vpc-public-us-east-2c",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "xyz-D0wdJRWj-vpc-public-us-east-2c",
              "kubernetes.io/cluster/xyz-cluster-D0wdJRWj": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e7c77702628ede0a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700630169071:vpc/vpc-0e7c77702628ede0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04f12b1515a00335d",
            "default_route_table_id": "rtb-0b5d1a5090f966ca0",
            "default_security_group_id": "sg-04e2dd1c291712129",
            "dhcp_options_id": "dopt-c41624ac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e7c77702628ede0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5d1a5090f966ca0",
            "owner_id": "700630169071",
            "tags": {
              "Name": "xyz-D0wdJRWj-vpc"
            },
            "tags_all": {
              "Name": "xyz-D0wdJRWj-vpc"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}